# openedx-admin

backend/: Cargo.toml  Dockerfile
backend/migrations/2020-08-15-204901_create_users_table/: up.sql
backend/migrations/2020-08-15-204923_create_courses_table/: down.sql  up.sql
backend/migrations/2020-08-15-204949_create_login_history_table/: up.sql
backend/src/: error.rs  main.rs  schema.rs
backend/src/config/: app.rs  db.rs
backend/src/handler/: account.rs  hello.rs  mod.rs
backend/src/middleware/: authentication.rs
backend/src/model/: login_history.rs  mod.rs  response.rs  user.rs  user_token.rs
backend/src/service/: account.rs  mod.rs
backend/src/util/: message.rs  mod.rs  token.rs
