[package]
name = "openedx-admin-backend"
version = "0.1.0"
authors = ["dikuchan <dikuchan@yahoo.com>"]
edition = "2018"

[dependencies]
futures = "0.3.5"

# Actix
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2"
actix-service = "1.0.6"

# Auth
uuid = { version = "0.8.1", features = ["serde", "v4"] }
jsonwebtoken = "7.2.0"

# Logging
dotenv = "0.15"
log = "0.4"
env_logger = "0.7.1"

# Database
chrono = { version = "0.4.13", features = ["serde"] }
r2d2 = "0.8.9"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.4.0"

# JSON
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
